# amor-yarp-devices

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
doc/: CMakeLists.txt  amor-yarp-devices-install.md  groups.dox
libraries/YarpPlugins/: CMakeLists.txt
libraries/YarpPlugins/AmorCartesianControl/: AmorCartesianControl.cpp  AmorCartesianControl.hpp  CMakeLists.txt  DeviceDriverImpl.cpp  ICartesianControlImpl.cpp  LogComponent.cpp  LogComponent.hpp
libraries/YarpPlugins/AmorControlBoard/: AmorControlBoard.cpp  CMakeLists.txt  DeviceDriverImpl.cpp  IAxisInfoImpl.cpp  IControlLimitsImpl.cpp  IControlModeImpl.cpp  ICurrentControlImpl.cpp  IEncodersImpl.cpp  IPositionControlImpl.cpp  IVelocityControlImpl.cpp  LogComponent.cpp  LogComponent.hpp
libraries/YarpPlugins/PortMonitorPlugins/lua/: CMakeLists.txt
share/: CMakeLists.txt
share/applications/: streamingSharedControl.xml
